# voice-to-text

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  SAFE_CHAIN_FIX.md  TROUBLESHOOTING.md  pyproject.toml  run.py  setup.py
src/: __init__.py  main.py
src/audio/: __init__.py  audio_feedback.py  recorder.py
src/config/: __init__.py  persistence.py  settings.py  settings_manager.py
src/transcription/: __init__.py  retry_strategy.py  service.py
src/ui/: __init__.py  components.py  main_window.py
src/utils/: __init__.py  clipboard.py  threading_utils.py
