[project]
name = "voice-to-text"
version = "0.1.0"
description = "Voice-to-text application with support for English and Hebrew using OpenAI Whisper API"
requires-python = ">=3.9"
dependencies = [
    "customtkinter>=5.2.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.20.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyperclip>=1.8.2",
]

[project.scripts]
voice-to-text = "src.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
build = [
    "py2app>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
